--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -896,6 +896,12 @@ video {
   margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
@@ -918,12 +924,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.25rem * var(--tw-space-x-reverse));
   margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
@@ -984,6 +984,18 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
 .rounded-t-md {
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem;
@@ -1040,6 +1052,26 @@ video {
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
+.border-\[\#456\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(68, 85, 102, var(--tw-border-opacity));
+}
+
+.border-\[\#064079\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(6, 64, 121, var(--tw-border-opacity));
+}
+
+.border-\[\#100679\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(16, 6, 121, var(--tw-border-opacity));
+}
+
+.border-\[\#8279e6\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(130, 121, 230, var(--tw-border-opacity));
+}
+
 .bg-indigo-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
@@ -1054,9 +1086,29 @@ video {
   background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+}
+
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
 }
 
 .bg-gray-500 {
@@ -1104,31 +1156,6 @@ video {
   background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
 }
 
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
-}
-
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
@@ -1137,6 +1164,68 @@ video {
 .bg-yellow-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
+}
+
+.bg-\[\#151c48\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(21, 28, 72, var(--tw-bg-opacity));
+}
+
+.bg-\[\#252A4C\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(37, 42, 76, var(--tw-bg-opacity));
+}
+
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+
+.bg-\[\#081567\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(8, 21, 103, var(--tw-bg-opacity));
+}
+
+.bg-\[\#06146d\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(6, 20, 109, var(--tw-bg-opacity));
+}
+
+.bg-\[\#06146d48\] {
+  background-color: #06146d48;
+}
+
+.bg-\[\#2a305848\] {
+  background-color: #2a305848;
+}
+
+.bg-\[\#000c7a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(0, 12, 122, var(--tw-bg-opacity));
+}
+
+.bg-\[\#292c4d\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(41, 44, 77, var(--tw-bg-opacity));
+}
+
+.bg-\[\#060e69\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(6, 14, 105, var(--tw-bg-opacity));
+}
+
+.bg-\[\#071393\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(7, 19, 147, var(--tw-bg-opacity));
+}
+
+.bg-\[\#0713935d\] {
+  background-color: #0713935d;
+}
+
+.bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(30, 58, 138, var(--tw-bg-opacity));
 }
 
 .bg-opacity-25 {
@@ -1153,6 +1242,30 @@ video {
 
 .bg-opacity-70 {
   --tw-bg-opacity: 0.7;
+}
+
+.bg-opacity-60 {
+  --tw-bg-opacity: 0.6;
+}
+
+.bg-opacity-90 {
+  --tw-bg-opacity: 0.9;
+}
+
+.bg-opacity-100 {
+  --tw-bg-opacity: 1;
+}
+
+.bg-opacity-10 {
+  --tw-bg-opacity: 0.1;
+}
+
+.bg-opacity-20 {
+  --tw-bg-opacity: 0.2;
+}
+
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
 }
 
 .bg-gradient-to-r {
@@ -1188,12 +1301,12 @@ video {
   padding: 0.5rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-2\.5 {
@@ -1236,14 +1349,14 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .px-6 {
@@ -1407,6 +1520,11 @@ video {
   color: rgba(29, 78, 216, var(--tw-text-opacity));
 }
 
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1521,6 +1639,11 @@ video {
   color: rgba(99, 102, 241, var(--tw-text-opacity));
 }
 
+.dark .dark\:border-\[\#8279e6\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(130, 121, 230, var(--tw-border-opacity));
+}
+
 .dark .dark\:bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
@@ -1541,12 +1664,97 @@ video {
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#252A4C\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(37, 42, 76, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#151c48\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(21, 28, 72, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#050a24\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(5, 10, 36, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#060c2e\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(6, 12, 46, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#080f3e\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(8, 15, 62, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#292c4d\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(41, 44, 77, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#292c4d7e\] {
+  background-color: #292c4d7e;
+}
+
+.dark .dark\:bg-\[\#161729\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(22, 23, 41, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(30, 58, 138, var(--tw-bg-opacity));
+}
+
 .dark .dark\:bg-opacity-75 {
   --tw-bg-opacity: 0.75;
 }
 
 .dark .dark\:bg-opacity-10 {
   --tw-bg-opacity: 0.1;
+}
+
+.dark .dark\:bg-opacity-90 {
+  --tw-bg-opacity: 0.9;
+}
+
+.dark .dark\:bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
+}
+
+.dark .dark\:bg-opacity-80 {
+  --tw-bg-opacity: 0.8;
+}
+
+.dark .dark\:bg-opacity-70 {
+  --tw-bg-opacity: 0.7;
+}
+
+.dark .dark\:bg-opacity-95 {
+  --tw-bg-opacity: 0.95;
+}
+
+.dark .dark\:bg-opacity-25 {
+  --tw-bg-opacity: 0.25;
+}
+
+.dark .dark\:bg-opacity-5 {
+  --tw-bg-opacity: 0.05;
+}
+
+.dark .dark\:bg-opacity-20 {
+  --tw-bg-opacity: 0.2;
+}
+
+.dark .dark\:bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
 }
 
 .dark .dark\:text-gray-100 {
@@ -1569,6 +1777,11 @@ video {
   color: rgba(249, 250, 251, var(--tw-text-opacity));
 }
 
+.dark .dark\:text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+
 .dark .dark\:hover\:bg-indigo-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
@@ -1587,6 +1800,10 @@ video {
   .sm\:max-w-max {
     max-width: -webkit-max-content;
     max-width: max-content;
+  }
+
+  .sm\:p-5 {
+    padding: 1.25rem;
   }
 
   .sm\:px-10 {
